--- a/notebooks/prepare_data/4i_annotate.ipynb.ipynb
+++ b/notebooks/prepare_data/4i_annotate.ipynb.ipynb
@@ -508,6 +508,48 @@
    "source": [
     "adata.write(\"/Users/giovanni.palla/Datasets/tutorial_data/4i.h5ad\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Variable names are not unique. To make them unique, call `.var_names_make_unique`.\n"
+     ]
+    }
+   ],
+   "source": [
+    "adata = sc.read(\"/Users/giovanni.palla/Datasets/tutorial_data/4i.h5ad\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AnnData object with n_obs × n_vars = 270938 × 43\n",
+       "    obs: 'x', 'y', 'is_nucleous', 'is_cytplasm', 'cell_id', 'leiden', 'cluster'\n",
+       "    uns: 'cluster_colors', 'leiden', 'leiden_colors', 'neighbors', 'pca', 'rank_genes_groups', 'umap'\n",
+       "    obsm: 'X_pca', 'X_umap', 'spatial'\n",
+       "    varm: 'PCs'\n",
+       "    obsp: 'connectivities', 'distances'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adata"
+   ]
   }
  ],
  "metadata": {
