--- a/notebooks/prepare_data/imc.ipynb
+++ b/notebooks/prepare_data/imc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,6 +100,30 @@
    "outputs": [],
    "source": [
     "adata.write(\"/Users/giovanni.palla/Datasets/tutorial_data/imc.h5ad\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AnnData object with n_obs × n_vars = 4668 × 34\n",
+       "    obs: 'cell type'\n",
+       "    uns: 'cell type_colors'\n",
+       "    obsm: 'spatial'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adata = sc.read(\"/Users/giovanni.palla/Datasets/tutorial_data/imc.h5ad\")\n",
+    "adata"
    ]
   }
  ],
