--- a/notebooks/prepare_data/seqfish.ipynb
+++ b/notebooks/prepare_data/seqfish.ipynb
@@ -130,6 +130,30 @@
    "source": [
     "adata.write(\"/Users/giovanni.palla/Datasets/tutorial_data/seqfish.h5ad\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AnnData object with n_obs × n_vars = 19416 × 351\n",
+       "    obs: 'Area', 'celltype_mapped_refined'\n",
+       "    uns: 'celltype_mapped_refined_colors'\n",
+       "    obsm: 'X_umap', 'spatial'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adata = sc.read(\"/Users/giovanni.palla/Datasets/tutorial_data/seqfish.h5ad\")\n",
+    "adata"
+   ]
   }
  ],
  "metadata": {
