--- a/notebooks/prepare_data/visium_fluo_crop.ipynb
+++ b/notebooks/prepare_data/visium_fluo_crop.ipynb
@@ -19,13 +19,7 @@
      "output_type": "stream",
      "text": [
       "/Users/giovanni.palla/.local/lib/python3.8/site-packages/requests/__init__.py:89: RequestsDependencyWarning: urllib3 (1.26.0) or chardet (3.0.4) doesn't match a supported version!\n",
-      "  warnings.warn(\"urllib3 ({}) or chardet ({}) doesn't match a supported \"\n",
-      "/Users/giovanni.palla/miniconda3/envs/spatial/lib/python3.8/site-packages/docrep/decorators.py:26: SyntaxWarning: 'cont_show.full_desc' is not a valid key!\n",
-      "  doc = func(self, args[0].__doc__, *args[1:], **kwargs)\n",
-      "/Users/giovanni.palla/miniconda3/envs/spatial/lib/python3.8/site-packages/docrep/decorators.py:26: SyntaxWarning: 'cont_show.parameters' is not a valid key!\n",
-      "  doc = func(self, args[0].__doc__, *args[1:], **kwargs)\n",
-      "/Users/giovanni.palla/miniconda3/envs/spatial/lib/python3.8/site-packages/docrep/decorators.py:26: SyntaxWarning: 'cont_show.returns' is not a valid key!\n",
-      "  doc = func(self, args[0].__doc__, *args[1:], **kwargs)\n"
+      "  warnings.warn(\"urllib3 ({}) or chardet ({}) doesn't match a supported \"\n"
      ]
     }
    ],
@@ -503,6 +497,62 @@
    "source": [
     "# save adata\n",
     "adata_cropped.write(os.path.join(outdir, 'visium_fluo_crop.h5ad'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AnnData object with n_obs × n_vars = 704 × 16562\n",
+       "    obs: 'in_tissue', 'array_row', 'array_col', 'n_genes_by_counts', 'log1p_n_genes_by_counts', 'total_counts', 'log1p_total_counts', 'pct_counts_in_top_50_genes', 'pct_counts_in_top_100_genes', 'pct_counts_in_top_200_genes', 'pct_counts_in_top_500_genes', 'total_counts_MT', 'log1p_total_counts_MT', 'pct_counts_MT', 'n_counts', 'leiden', 'cluster'\n",
+       "    var: 'gene_ids', 'feature_types', 'genome', 'MT', 'n_cells_by_counts', 'mean_counts', 'log1p_mean_counts', 'pct_dropout_by_counts', 'total_counts', 'log1p_total_counts', 'n_cells', 'highly_variable', 'highly_variable_rank', 'means', 'variances', 'variances_norm'\n",
+       "    uns: 'cluster_colors', 'hvg', 'leiden', 'leiden_colors', 'neighbors', 'pca', 'spatial', 'umap'\n",
+       "    obsm: 'X_pca', 'X_umap', 'spatial'\n",
+       "    varm: 'PCs'\n",
+       "    obsp: 'connectivities', 'distances'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adata_cropped = sc.read(os.path.join(outdir, 'visium_fluo_crop.h5ad'))\n",
+    "adata_cropped"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/giovanni.palla/miniconda3/envs/spatial/lib/python3.8/site-packages/rasterio/__init__.py:221: NotGeoreferencedWarning: Dataset has no geotransform set. The identity matrix may be returned.\n",
+      "  s = DatasetReader(path, driver=driver, sharing=sharing, **kwargs)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(7272, 7272)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_img_cropped = sq.im.ImageContainer(os.path.join(outdir, 'visium_fluo_crop.tiff'))\n",
+    "test_img_cropped.shape"
    ]
   }
  ],
