added sc data and filtered 4i

--- a/notebooks/prepare_data/4i_annotate.ipynb.ipynb
+++ b/notebooks/prepare_data/4i_annotate.ipynb.ipynb
@@ -550,6 +550,40 @@
    "source": [
     "adata"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Variable names are not unique. To make them unique, call `.var_names_make_unique`.\n"
+     ]
+    }
+   ],
+   "source": [
+    "adata = adata[adata.obs.cluster != \"ER_mitochondria_3\"].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Variable names are not unique. To make them unique, call `.var_names_make_unique`.\n"
+     ]
+    }
+   ],
+   "source": [
+    "adata = sc.read(\"/Users/giovanni.palla/Datasets/tutorial_data/4i.h5ad\")"
+   ]
   }
  ],
  "metadata": {
