restructure, add sc dataset and modify graph figures

--- a/notebooks/graph_figures/compare_ligrec.ipynb
+++ b/notebooks/graph_figures/compare_ligrec.ipynb
@@ -318,13 +318,7 @@
       "[ ][APP][28/01/21-10:13:27][WARNING] User selected downloaded database `v2.0.0` is available, using it\n",
       "[ ][CORE][28/01/21-10:13:27][INFO] Initializing SqlAlchemy CellPhoneDB Core\n",
       "[ ][CORE][28/01/21-10:13:27][INFO] Using custom database at /home/marius.lange/.cpdb/releases/v2.0.0/cellphone.db\n",
-      "[ ][APP][28/01/21-10:13:27][INFO] Launching Method cpdb_statistical_analysis_local_method_launcher\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[ ][APP][28/01/21-10:13:27][INFO] Launching Method cpdb_statistical_analysis_local_method_launcher\n",
       "[ ][APP][28/01/21-10:13:27][INFO] Launching Method _set_paths\n",
       "[ ][APP][28/01/21-10:13:27][WARNING] Output directory (out) exist and is not empty. Result can overwrite old results\n",
       "[ ][APP][28/01/21-10:13:27][INFO] Launching Method _load_meta_counts\n",
@@ -430,13 +424,7 @@
       "[ ][APP][28/01/21-10:22:58][INFO] Launching Method _load_meta_counts\n",
       "[ ][CORE][28/01/21-10:23:02][INFO] Launching Method cpdb_statistical_analysis_launcher\n",
       "[ ][CORE][28/01/21-10:23:02][INFO] Launching Method _counts_validations\n",
-      "[ ][CORE][28/01/21-10:23:02][INFO] [Cluster Statistical Analysis Simple] Threshold:0.1 Iterations:1000 Debug-seed:0 Threads:32 Precision:4\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[ ][CORE][28/01/21-10:23:02][INFO] [Cluster Statistical Analysis Simple] Threshold:0.1 Iterations:1000 Debug-seed:0 Threads:32 Precision:4\n",
       "[ ][CORE][28/01/21-10:23:02][WARNING] Debug random seed enabled. Setted to 0\n",
       "[ ][CORE][28/01/21-10:23:02][INFO] Running Simple Prefilters\n",
       "[ ][CORE][28/01/21-10:23:03][INFO] Running Real Simple Analysis\n",
@@ -544,13 +532,7 @@
       "[ ][CORE][28/01/21-10:32:37][INFO] Running Statistical Analysis\n",
       "[ ][CORE][28/01/21-10:33:31][INFO] Building Pvalues result\n",
       "[ ][CORE][28/01/21-10:33:41][INFO] Building Simple results\n",
-      "[ ][CORE][28/01/21-10:33:42][INFO] [Cluster Statistical Analysis Complex] Threshold:0.1 Iterations:1000 Debug-seed:0 Threads:32 Precision:4\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[ ][CORE][28/01/21-10:33:42][INFO] [Cluster Statistical Analysis Complex] Threshold:0.1 Iterations:1000 Debug-seed:0 Threads:32 Precision:4\n",
       "[ ][CORE][28/01/21-10:33:42][WARNING] Debug random seed enabled. Setted to 0\n",
       "[ ][CORE][28/01/21-10:33:42][INFO] Running Complex Prefilters\n",
       "[ ][CORE][28/01/21-10:33:59][INFO] Running Real Complex Analysis\n",
@@ -658,13 +640,7 @@
       "[ ][CORE][28/01/21-10:44:12][INFO] Building Pvalues result\n",
       "[ ][CORE][28/01/21-10:44:15][INFO] Building Complex results\n",
       "7\n",
-      "[ ][APP][28/01/21-10:44:37][WARNING] Latest local available version is `v2.0.0`, using it\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[ ][APP][28/01/21-10:44:37][WARNING] Latest local available version is `v2.0.0`, using it\n",
       "[ ][APP][28/01/21-10:44:37][WARNING] User selected downloaded database `v2.0.0` is available, using it\n",
       "[ ][CORE][28/01/21-10:44:37][INFO] Initializing SqlAlchemy CellPhoneDB Core\n",
       "[ ][CORE][28/01/21-10:44:37][INFO] Using custom database at /home/marius.lange/.cpdb/releases/v2.0.0/cellphone.db\n",
@@ -770,13 +746,7 @@
       "[ ][CORE][28/01/21-10:54:10][INFO] Initializing SqlAlchemy CellPhoneDB Core\n",
       "[ ][CORE][28/01/21-10:54:10][INFO] Using custom database at /home/marius.lange/.cpdb/releases/v2.0.0/cellphone.db\n",
       "[ ][APP][28/01/21-10:54:10][INFO] Launching Method cpdb_statistical_analysis_local_method_launcher\n",
-      "[ ][APP][28/01/21-10:54:10][INFO] Launching Method _set_paths\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[ ][APP][28/01/21-10:54:10][INFO] Launching Method _set_paths\n",
       "[ ][APP][28/01/21-10:54:10][WARNING] Output directory (out) exist and is not empty. Result can overwrite old results\n",
       "[ ][APP][28/01/21-10:54:10][INFO] Launching Method _load_meta_counts\n",
       "[ ][CORE][28/01/21-10:54:14][INFO] Launching Method cpdb_statistical_analysis_launcher\n",
@@ -982,5 +952,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
