--- a/notebooks/prepare_data/sc_tasic.ipynb
+++ b/notebooks/prepare_data/sc_tasic.ipynb
@@ -343,6 +343,32 @@
    "source": [
     "adata.write(\"/Users/giovanni.palla/Datasets/tutorial_data/sc_mouse_cortex.h5ad\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AnnData object with n_obs × n_vars = 21697 × 36826\n",
+       "    obs: 'sample_name', 'organism', 'donor_sex', 'cell_class', 'cell_subclass', 'cell_cluster', 'n_genes_by_counts', 'log1p_n_genes_by_counts', 'total_counts', 'log1p_total_counts', 'pct_counts_in_top_50_genes', 'pct_counts_in_top_100_genes', 'pct_counts_in_top_200_genes', 'pct_counts_in_top_500_genes', 'total_counts_mt', 'log1p_total_counts_mt', 'pct_counts_mt', 'n_counts'\n",
+       "    var: 'mt', 'n_cells_by_counts', 'mean_counts', 'log1p_mean_counts', 'pct_dropout_by_counts', 'total_counts', 'log1p_total_counts', 'n_cells', 'highly_variable', 'highly_variable_rank', 'means', 'variances', 'variances_norm'\n",
+       "    uns: 'hvg', 'log1p', 'pca', 'neighbors', 'umap', 'cell_subclass_colors', 'cell_class_colors'\n",
+       "    obsm: 'X_pca', 'X_umap'\n",
+       "    varm: 'PCs'\n",
+       "    obsp: 'distances', 'connectivities'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adata"
+   ]
   }
  ],
  "metadata": {
