--- a/notebooks/graph_figures/ligrec_vignette.ipynb
+++ b/notebooks/graph_figures/ligrec_vignette.ipynb
@@ -532,9 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -861,9 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -1587,9 +1583,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -1635,9 +1629,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cellrank",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cellrank"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1682,5 +1676,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
