--- a/notebooks/prepare_data/sc_tasic.ipynb
+++ b/notebooks/prepare_data/sc_tasic.ipynb
@@ -96,13 +96,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['0610005C13Rik', '0610006L08Rik', '0610007P14Rik', '0610009B22Rik',\n",
+       "       '0610009E02Rik', '0610009L18Rik', '0610009O20Rik', '0610010B08Rik',\n",
+       "       '0610010F05Rik', '0610010K14Rik',\n",
+       "       ...\n",
+       "       'n-R5s134', 'n-R5s136', 'n-R5s138', 'n-R5s139', 'n-R5s141', 'n-R5s142',\n",
+       "       'n-R5s143', 'n-R5s144', 'n-R5s146', 'n-R5s149'],\n",
+       "      dtype='object', length=45768)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counts_t.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy import sparse\n",
     "\n",
-    "adata_raw = AnnData(sparse.csr_matrix(counts_t.to_numpy()), obs=metadata)\n",
+    "adata_raw = AnnData(\n",
+    "    sparse.csr_matrix(counts_t.to_numpy()),\n",
+    "    obs=metadata,\n",
+    ")\n",
+    "adata_raw.var.index = counts_t.columns\n",
     "adata_raw.var_names_make_unique()\n",
     "adata_raw.var[\"mt\"] = adata_raw.var_names.str.startswith(\"mt-\")\n",
     "sc.pp.calculate_qc_metrics(adata_raw, qc_vars=[\"mt\"], inplace=True)"
@@ -110,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +161,7 @@
        "<AxesSubplot:xlabel='n_genes_by_counts'>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -168,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +254,7 @@
        "Name: cell_subclass, dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +274,7 @@
        "(22951, 36826)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +294,7 @@
        "(21697, 36826)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +391,7 @@
        "    obsp: 'distances', 'connectivities'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
