--- a/notebooks/graph_figures/compare_ligrec.ipynb
+++ b/notebooks/graph_figures/compare_ligrec.ipynb
@@ -905,9 +905,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cellrank",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cellrank"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
