--- a/notebooks/graph_figures/ligrec_vignette.ipynb
+++ b/notebooks/graph_figures/ligrec_vignette.ipynb
@@ -27,7 +27,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/giovanni.palla/miniconda3/envs/spatial/lib/python3.8/site-packages/requests/__init__.py:89: RequestsDependencyWarning: urllib3 (1.26.3) or chardet (3.0.4) doesn't match a supported version!\n",
+      "  warnings.warn(\"urllib3 ({}) or chardet ({}) doesn't match a supported \"\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -42,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Usage"
+    "# Load the mouse data"
    ]
   },
   {
@@ -51,131 +60,42 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function ligrec in module squidpy.gr._ligrec:\n",
-      "\n",
-      "ligrec(adata: 'AnnData', cluster_key: 'str', interactions: 'Optional[Interaction_t]' = None, complex_policy: 'str' = 'min', threshold: 'float' = 0.01, corr_method: 'Optional[str]' = None, corr_axis: 'str' = 'clusters', use_raw: 'bool' = True, copy: 'bool' = False, key_added: 'Optional[str]' = None, **kwargs: 'Any') -> 'Optional[LigrecResult]'\n",
-      "    Perform the permutation test as described in :cite:`cellphonedb`.\n",
-      "    \n",
-      "    Parameters\n",
-      "    ----------\n",
-      "    adata\n",
-      "        Annotated data object.\n",
-      "    use_raw\n",
-      "        Whether to access :attr:`anndata.AnnData.raw`.\n",
-      "    interactions\n",
-      "        Interaction to test. The type can be one of:\n",
-      "    \n",
-      "            - :class:`pandas.DataFrame` - must contain at least 2 columns named `'source'` and `'target'`.\n",
-      "            - :class:`dict` - dictionary with at least 2 keys named `'source'` and `'target'`.\n",
-      "            - :class:`typing.Sequence` - Either a sequence of :class:`str`, in which case all combinations are\n",
-      "              produced, or a sequence of :class:`tuple` of 2 :class:`str` or a :class:`tuple` of 2 sequences.\n",
-      "    \n",
-      "        If `None`, the interactions are extracted from :mod:`omnipath`. Protein complexes can be specified by\n",
-      "        delimiting the components with `'_'`, such as `'alpha_beta_gamma'`.\n",
-      "    complex_policy\n",
-      "        Policy on how to handle complexes. Valid options are:\n",
-      "    \n",
-      "            - `'min'` - select gene with the minimum average expression. This is the same as in\n",
-      "              :cite:`cellphonedb`.\n",
-      "            - `'all'` - select all possible combinations between `'source'` and `'target'` complexes.\n",
-      "    interactions_params\n",
-      "        Keyword arguments for :func:`omnipath.interactions.import_intercell_network` defining the interactions.\n",
-      "        These datasets from :cite:`omnipath` are used by default: `omnipath`, `pathwayextra`, `kinaseextra` and\n",
-      "        `ligrecextra`.\n",
-      "    transmitter_params\n",
-      "        Keyword arguments for :func:`omnipath.interactions.import_intercell_network` defining the transmitter\n",
-      "        side of intercellular connections.\n",
-      "    receiver_params\n",
-      "        Keyword arguments for :func:`omnipath.interactions.import_intercell_network` defining the receiver\n",
-      "        side of intercellular connections.\n",
-      "    cluster_key\n",
-      "        Key in :attr:`anndata.AnnData.obs` where clustering is stored.\n",
-      "    clusters\n",
-      "        Clusters from :attr:`anndata.AnnData.obs` ``['{cluster_key}']``. Can be specified either as a sequence\n",
-      "        of :class:`tuple` or just a sequence of cluster names, in which case all combinations considered.\n",
-      "    n_perms\n",
-      "        Number of permutations for the permutation test.\n",
-      "    threshold\n",
-      "        Do not perform permutation test if any of the interacting components is being expressed\n",
-      "        in less than ``threshold`` percent of cells within a given cluster.\n",
-      "    seed\n",
-      "        Random seed for reproducibility.\n",
-      "    corr_method\n",
-      "        Correction method for multiple testing. See :func:`statsmodels.stats.multitest.multipletests`\n",
-      "        for valid options.\n",
-      "    corr_axis\n",
-      "        Axis over which to perform the FDR correction. Only used when ``corr_method != None``. Valid options are:\n",
-      "    \n",
-      "            - `'interactions'` - correct interactions by performing FDR correction across the clusters.\n",
-      "            - `'clusters'` - correct clusters by performing FDR correction across the interactions.\n",
-      "    alpha\n",
-      "        Significance level for FDR correction. Only used when ``corr_method != None``.\n",
-      "    copy\n",
-      "        If `True`, return the result, otherwise save it to the ``adata`` object.\n",
-      "    key_added\n",
-      "        Key in :attr:`anndata.AnnData.uns` where the result is stored if ``copy = False``.\n",
-      "        If `None`, ``'{cluster_key}_ligrec'`` will be used.\n",
-      "    numba_parallel\n",
-      "        Whether to use :class:`numba.prange` or not. If `None`, it's determined automatically.\n",
-      "        For small datasets or small number of interactions, it's recommended to set this to `False`.\n",
-      "    n_jobs\n",
-      "        Number of parallel jobs.\n",
-      "    backend\n",
-      "        Parallelization backend to use. See :class:`joblib.Parallel` for available options.\n",
-      "    show_progress_bar\n",
-      "        Whether to show the progress bar or not.\n",
-      "    \n",
-      "    Returns\n",
-      "    -------\n",
-      "    If ``copy = True``, returns a :class:`typing.NamedTuple`:\n",
-      "    \n",
-      "        - `'means'` - :class:`pandas.DataFrame` containing the mean expression.\n",
-      "        - `'pvalues'` - :class:`pandas.DataFrame` containing the possibly corrected p-values.\n",
-      "        - `'metadata'` - :class:`pandas.DataFrame` containing interaction metadata.\n",
-      "    \n",
-      "    Otherwise, modifies the ``adata`` object with the following key:\n",
-      "    \n",
-      "        - :attr:`anndata.AnnData.uns` ``['{key_added}']`` - the above mentioned triple.\n",
-      "    \n",
-      "    `NaN` p-values mark combinations for which the mean expression of one of the interacting components was 0\n",
-      "    or it didn't pass the ``threshold`` percentage of cells being expressed within a given cluster.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "help(sq.gr.ligrec)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Load the mouse data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
       "WARNING: In Scanpy 0.*, this returned logarithmized data. Now it returns non-logarithmized data.\n"
      ]
     },
     {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "508365c7f90c4d0da0a9e3453ac30b7e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=10297693.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/giovanni.palla/miniconda3/envs/spatial/lib/python3.8/site-packages/anndata/_core/anndata.py:1192: FutureWarning: is_categorical is deprecated and will be removed in a future version.  Use is_categorical_dtype instead\n",
+      "  if is_string_dtype(df[key]) and not is_categorical(df[key])\n",
       "... storing 'paul15_clusters' as categorical\n",
-      "/home/michal/.miniconda3/envs/cellrank/lib/python3.8/site-packages/pandas/core/arrays/categorical.py:2487: FutureWarning: The `inplace` parameter in pandas.Categorical.remove_unused_categories is deprecated and will be removed in a future version.\n",
-      "  res = method(*args, **kwargs)\n",
+      "/Users/giovanni.palla/miniconda3/envs/spatial/lib/python3.8/site-packages/anndata/_core/anndata.py:1094: FutureWarning: is_categorical is deprecated and will be removed in a future version.  Use is_categorical_dtype instead\n",
+      "  if not is_categorical(df_full[k]):\n",
       "Trying to set attribute `.uns` of view, copying.\n"
      ]
     }
@@ -193,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,25 +145,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Removed `1` duplicate gene(s)\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "57e85e2b8f6d4852b19ca725149d82b3",
+       "model_id": "c97e17e5bfe94a2cac78c7022389778e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/10000 [00:00<?, ?permutation/s]"
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=437343.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -253,7 +166,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of CellPhoneDB interactions (mouse data): 9\n"
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Removed `1` duplicate gene(s)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5d4f277112914e339bade9510f2c7d59",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=10000.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Number of CellPhoneDB interactions (mouse data): 11\n"
      ]
     },
     {
@@ -339,7 +281,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>GRN</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">GRN</th>\n",
        "      <th>TNFRSF1A</th>\n",
        "      <td>0.2868</td>\n",
        "      <td>0.4736</td>\n",
@@ -362,6 +304,30 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.0908</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TNFRSF1B</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.1943</td>\n",
+       "      <td>0.0358</td>\n",
+       "      <td>0.0444</td>\n",
+       "      <td>0.0302</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">TGFB1</th>\n",
@@ -436,68 +402,43 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TGFBR3</th>\n",
-       "      <th>TGFB1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "<p>5 rows × 361 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "cluster_1         10GMP                                                       \\\n",
-       "cluster_2         10GMP    11DC 12Baso 13Baso 14Mo 15Mo 16Neu  17Neu   18Eos   \n",
-       "source target                                                                  \n",
-       "GRN    TNFRSF1A  0.2868  0.4736  0.531    NaN  NaN  NaN   NaN  0.204  0.7944   \n",
-       "TGFB1  TGFBR3       NaN     NaN    NaN    NaN  NaN  NaN   NaN    NaN     NaN   \n",
-       "       TGFBR2       NaN     NaN    NaN    NaN  NaN  NaN   NaN    NaN  0.0061   \n",
-       "       ITGAV        NaN     NaN    NaN    NaN  NaN  NaN   NaN    NaN     NaN   \n",
-       "TGFBR3 TGFB1        NaN     NaN    NaN    NaN  NaN  NaN   NaN    NaN     NaN   \n",
+       "cluster_1         10GMP                                                        \\\n",
+       "cluster_2         10GMP    11DC 12Baso  13Baso    14Mo    15Mo   16Neu  17Neu   \n",
+       "source target                                                                   \n",
+       "GRN    TNFRSF1A  0.2868  0.4736  0.531     NaN     NaN     NaN     NaN  0.204   \n",
+       "       TNFRSF1B     NaN     NaN    NaN  0.1943  0.0358  0.0444  0.0302    NaN   \n",
+       "TGFB1  TGFBR3       NaN     NaN    NaN     NaN     NaN     NaN     NaN    NaN   \n",
+       "       TGFBR2       NaN     NaN    NaN     NaN     NaN     NaN     NaN    NaN   \n",
+       "       ITGAV        NaN     NaN    NaN     NaN     NaN     NaN     NaN    NaN   \n",
        "\n",
-       "cluster_1                ...    9GMP                                           \\\n",
-       "cluster_2       19Lymph  ... 19Lymph 1Ery 2Ery    3Ery 4Ery    5Ery 6Ery 7MEP   \n",
-       "source target            ...                                                    \n",
-       "GRN    TNFRSF1A  0.3359  ...  0.1427  NaN  NaN     NaN  NaN  0.8665  NaN  NaN   \n",
-       "TGFB1  TGFBR3       NaN  ...     NaN  NaN  NaN  0.0648  NaN     NaN  NaN  NaN   \n",
-       "       TGFBR2       NaN  ...     NaN  NaN  NaN     NaN  NaN     NaN  NaN  NaN   \n",
-       "       ITGAV        NaN  ...     NaN  NaN  NaN     NaN  NaN     NaN  NaN  NaN   \n",
-       "TGFBR3 TGFB1        NaN  ...     NaN  NaN  NaN     NaN  NaN     NaN  NaN  NaN   \n",
+       "cluster_1                        ...    9GMP                                 \\\n",
+       "cluster_2         18Eos 19Lymph  ... 19Lymph 1Ery 2Ery    3Ery 4Ery    5Ery   \n",
+       "source target                    ...                                          \n",
+       "GRN    TNFRSF1A  0.7944  0.3359  ...  0.1427  NaN  NaN     NaN  NaN  0.8665   \n",
+       "       TNFRSF1B     NaN     NaN  ...     NaN  NaN  NaN     NaN  NaN     NaN   \n",
+       "TGFB1  TGFBR3       NaN     NaN  ...     NaN  NaN  NaN  0.0648  NaN     NaN   \n",
+       "       TGFBR2    0.0061     NaN  ...     NaN  NaN  NaN     NaN  NaN     NaN   \n",
+       "       ITGAV        NaN     NaN  ...     NaN  NaN  NaN     NaN  NaN     NaN   \n",
        "\n",
-       "cluster_1                        \n",
-       "cluster_2           8Mk    9GMP  \n",
-       "source target                    \n",
-       "GRN    TNFRSF1A     NaN  0.0908  \n",
-       "TGFB1  TGFBR3    0.0165     NaN  \n",
-       "       TGFBR2       NaN     NaN  \n",
-       "       ITGAV        NaN     NaN  \n",
-       "TGFBR3 TGFB1        NaN     NaN  \n",
+       "cluster_1                                  \n",
+       "cluster_2       6Ery 7MEP     8Mk    9GMP  \n",
+       "source target                              \n",
+       "GRN    TNFRSF1A  NaN  NaN     NaN  0.0908  \n",
+       "       TNFRSF1B  NaN  NaN     NaN     NaN  \n",
+       "TGFB1  TGFBR3    NaN  NaN  0.0165     NaN  \n",
+       "       TGFBR2    NaN  NaN     NaN     NaN  \n",
+       "       ITGAV     NaN  NaN     NaN     NaN  \n",
        "\n",
        "[5 rows x 361 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
