--- a/notebooks/reproducibility/sepal_melanoma.ipynb
+++ b/notebooks/reproducibility/sepal_melanoma.ipynb
@@ -28,7 +28,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "%load_ext lab_black\n",
-    "pth = \"./../sepal/data/real/melanoma.tsv.gz\"\n",
+    "pth = \"./data/melanoma.tsv.gz\"\n",
     "raw_data = d.RawData(\n",
     "    pth,\n",
     ")\n",
