--- a/notebooks/reproducibility/sepal_synth.ipynb
+++ b/notebooks/reproducibility/sepal_synth.ipynb
@@ -31,7 +31,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "%load_ext lab_black\n",
-    "pth = \"./../sepal/data/synthetic/image-based.tsv\"\n",
+    "pth = \"./data/image-based.tsv\"\n",
     "raw_data = d.RawData(\n",
     "    pth,\n",
     ")\n",
