--- a/notebooks/reproducibility/sepal_melanoma.ipynb
+++ b/notebooks/reproducibility/sepal_melanoma.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] : Using 8 workers\n",
+      "[INFO] : Using 2 workers\n",
       "[INFO] : Saturated Spots : 203\n"
      ]
     },
@@ -60,12 +60,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9956/9956 [01:11<00:00, 138.35it/s]\n"
+      "100%|██████████| 9956/9956 [01:51<00:00, 88.91it/s] \n"
      ]
     }
    ],
    "source": [
-    "times = m.propagate(data, normalize=True, scale=False, num_workers=8)"
+    "times = m.propagate(data, normalize=True, scale=False, num_workers=2)"
    ]
   },
   {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c562f1d4828144b58dc95adae744b2e9",
+       "model_id": "68a4de3ef59e47658d1bce2cf48215d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -238,12 +238,12 @@
     }
    ],
    "source": [
-    "sepal(adata, n_iter=2000, max_nbrs=4, n_jobs=4)"
+    "sepal(adata, max_nbrs=4, n_jobs=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        "[9956 rows x 1 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
        "Text(0.5, 1.0, 'spearman_0.86192')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
