--- a/notebooks/supp_figures/benchmarks/prepare_data_R.ipynb
+++ b/notebooks/supp_figures/benchmarks/prepare_data_R.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "scanpy==1.7.0rc2.dev1+g2a123065 anndata==0.7.4 umap==0.4.6 numpy==1.19.4 scipy==1.5.2 pandas==1.1.4 scikit-learn==0.23.2 statsmodels==0.12.1 python-igraph==0.8.3 leidenalg==0.8.2\n"
+      "scanpy==1.8.0.dev78+gc488909a anndata==0.7.5 umap==0.4.6 numpy==1.20.1 scipy==1.6.0 pandas==1.2.3 scikit-learn==0.24.2 statsmodels==0.12.2 python-igraph==0.8.3 leidenalg==0.8.3\n"
      ]
     }
    ],
@@ -51,14 +51,59 @@
    ],
    "source": [
     "adata_visium = sq.datasets.visium_fluo_adata()\n",
+    "adata_slideseq = sq.datasets.slideseqv2()\n",
     "adata_seqfish = sq.datasets.seqfish()\n",
     "adata_fouri = sq.datasets.four_i()\n",
-    "adata_imc = sq.datasets.imc()"
+    "adata_imc = sq.datasets.imc()\n",
+    "adata_merfish = sq.datasets.merfish()\n",
+    "adata_mibitof = sq.datasets.mibitof()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/giovanni.palla/miniconda3/envs/spatial/lib/python3.8/site-packages/pandas/core/arrays/categorical.py:2487: FutureWarning: The `inplace` parameter in pandas.Categorical.remove_unused_categories is deprecated and will be removed in a future version.\n",
+      "  res = method(*args, **kwargs)\n"
+     ]
+    }
+   ],
+   "source": [
+    "adata_mibitof = adata_mibitof[adata_mibitof.obs.batch == \"0\"].copy()\n",
+    "adata_merfish = adata_merfish[adata_merfish.obs.batch == \"0\"].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AnnData object with n_obs × n_vars = 6509 × 161\n",
+       "    obs: 'Cell_ID', 'Animal_ID', 'Animal_sex', 'Behavior', 'Bregma', 'Centroid_X', 'Centroid_Y', 'Cell_class', 'Neuron_cluster_ID', 'batch'\n",
+       "    uns: 'Cell_class_colors'\n",
+       "    obsm: 'spatial', 'spatial3d'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adata_merfish"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,34 +111,32 @@
     "\n",
     "adata_visium.uns = {}\n",
     "adata_fouri.uns = {}\n",
+    "adata_slideseq.uns = {}\n",
     "adata_fouri_r = AnnData(\n",
     "    sparse.csr_matrix(np.empty(adata_fouri.shape)),\n",
     "    obs=adata_fouri.obs[[\"cluster\"]].copy(),\n",
     ")\n",
     "adata_fouri_r.obsm[\"spatial\"] = adata_fouri.obsm[\"spatial\"]\n",
     "adata_seqfish.obs[\"cluster\"] = adata_seqfish.obs.celltype_mapped_refined\n",
-    "adata_imc.obs[\"cluster\"] = adata_imc.obs[\"cell type\"]"
+    "adata_imc.obs[\"cluster\"] = adata_imc.obs[\"cell type\"]\n",
+    "adata_slideseq.obs[\"cluster\"] = adata_slideseq.obs[\"cluster\"]\n",
+    "adata_merfish.obs[\"cluster\"] = adata_merfish.obs[\"Cell_class\"]\n",
+    "adata_mibitof.obs[\"cluster\"] = adata_mibitof.obs[\"Cluster\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/giovanni.palla/miniconda3/envs/spatial/lib/python3.8/site-packages/anndata/_core/anndata.py:1192: FutureWarning: is_categorical is deprecated and will be removed in a future version.  Use is_categorical_dtype instead\n",
-      "  if is_string_dtype(df[key]) and not is_categorical(df[key])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "adata_visium.write(\"/Users/giovanni.palla/.cache/squidpy/visium_R.h5ad\")\n",
     "adata_fouri_r.write(\"/Users/giovanni.palla/.cache/squidpy/fouri_R.h5ad\")\n",
     "adata_imc.write(\"/Users/giovanni.palla/.cache/squidpy/imc_R.h5ad\")\n",
-    "adata_seqfish.write(\"/Users/giovanni.palla/.cache/squidpy/seqfish_R.h5ad\")"
+    "adata_seqfish.write(\"/Users/giovanni.palla/.cache/squidpy/seqfish_R.h5ad\")\n",
+    "adata_slideseq.write(\"/Users/giovanni.palla/.cache/squidpy/slideseq_R.h5ad\")\n",
+    "adata_merfish.write(\"/Users/giovanni.palla/.cache/squidpy/merfish_R.h5ad\")\n",
+    "adata_mibitof.write(\"/Users/giovanni.palla/.cache/squidpy/mibitof_R.h5ad\")"
    ]
   },
   {
