update notebooks and start readme

--- a/notebooks/image_figures/fluo_image_analysis.ipynb
+++ b/notebooks/image_figures/fluo_image_analysis.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Figures for squidpy.im methods (using fluo datasets)\n",
-    "Contains:\n",
+    "# Figure 3, panels b-e\n",
+    "Visium fluoresecence image analysis:\n",
     "- cell segmentation using watershed\n",
     "- number of cells per spot + summary features using diifferent channels\n",
     "- plot of \"NEUN\" exppression in high/low \"anti-NEUN\" cells (similarly for GFAP)"
